<resources>
    <string name="app_name">Baby Name</string>
    <string name="explore_icon_desc">Explore</string>
    <string name="refine_icon_desc">Refine</string>
    <string name="settings_icon_desc">Settings</string>
    <string name="explore_main_header">Explore</string>
    <string name="refine_main_header">Refine</string>
    <string name="settings_main_header">Settings</string>

    <string name="back">Back</string>
    <string name="save">Save</string>


    <!--Auth Activity-->
    <string name="auth_text">Please log in or sign up</string>
    <string name="no_name">No names in list</string>
    <string name="login_text">Log In</string>
    <string name="signup_text">Sign Up</string>
    <string name="submit_text">Submit</string>
    <string name="forgot_pw">forgot password?</string>

    <!--Sign Up Fragment-->
    <string name="su_first_name_label">First Name</string>
    <string name="su_last_name_label">Last Name</string>
    <string name="su_first_name_hint">Jon</string>
    <string name="su_last_name_hint">Doe</string>
    <string name="su_email_label">Email</string>
    <string name="su_password_label">Password</string>
    <string name="su_confirm_password_label">Confirm Password</string>
    <string name="su_email_hint">example@domain.com</string>
    <string name="su_confirm_email_hint">Confirm email</string>


    <!--About Activity-->
    <string name="about_header">About</string>
    <string name="about_author_label">Author</string>
    <string name="about_author_name">Christian Matsoukis</string>
    <string name="about_author_email_label">Support Email</string>
    <string name="about_author_email">cmatsoukis@gmail.com</string>
    <string name="about_author_font_label">Fonts</string>
    <string name="about_author_font_geo_sans_light">Geo Sans Light</string>
    <string name="about_author_font_geo_sans_light_oblique">Geo Sans Light Oblique</string>
    <string name="about_author_font_author">Manfred Klein</string>
    <string name="about_icons_label">Icons</string>
    <string name="about_icons_site">https://www.iconsdb.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
